Update Wingsuit base drupal theme.

--- a/packages/wingsuit/source/default/patterns/04-templates/article/article.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/04-templates/article/article.wingsuit.yml
@@ -4,6 +4,7 @@ card:
   description: Use Article for your teasers
   fields:
     image:
+      labe: Image
       type: pattern
       preview:
         id: image
