Update wingsuit demo patterns.

--- a/packages/wingsuit/source/default/patterns/01-atoms/hamburger/hamburger.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/hamburger/hamburger.wingsuit.yml
@@ -2,4 +2,4 @@ hamburger:
   use: "@atoms/hamburger/hamburger.twig"
   label: Hamburger
   description: Simple animated hamburger icon.
-
+  visibility: storybook
