--- a/packages/wingsuit/source/default/patterns/01-atoms/svg/svg.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/svg/svg.wingsuit.yml
@@ -19,3 +19,4 @@ svg_icon:
     icon:
       label: Sprite Map
       description: Use a SVG Spritemap to display SVG Icons. This is prefered way to use SVGs.
+  visibility: storybook
