--- a/packages/wingsuit/source/default/patterns/04-templates/article/article.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/04-templates/article/article.wingsuit.yml
@@ -1,14 +1,8 @@
-card:
+article:
   use: "@templates/article/article.twig"
   label: Article
   description: Use Article for your teasers
   fields:
-    image:
-      labe: Image
-      type: pattern
-      preview:
-        id: image
-        variant: primary
     headline:
       type: text
       label: Headline
@@ -27,3 +21,4 @@ card:
     more:
       type: text
       label: More
+  visibility: drupal
