--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -14,6 +14,7 @@
   },
   "keywords": [
     "storybook",
+    "ui_patterns",
     "prototyping"
   ],
   "scripts": {
@@ -33,9 +34,9 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@storybook/addon-viewport": "^6.0.0-beta.6",
+    "@storybook/addon-viewport": "^6.0.0",
     "@storybook/linter-config": "^2.5.0",
-    "@storybook/react": "^6.0.0-beta.6",
+    "@storybook/react": "^6.0.0",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/cli": "1.0.0-beta.10",
@@ -69,9 +70,9 @@
     "yo": "^3.1.1"
   },
   "dependencies": {
-    "alpinejs": "^1.10.1",
+    "alpinejs": "^2.7.0",
     "svg4everybody": "^2.1.9",
-    "tailwindcss": "^1.4.0"
+    "tailwindcss": "^1.7.0"
   },
   "gitHead": "24181302c3122c8ebde3f87e394895a8feaf7e55"
 }
