--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/core",
-  "version": "1.0.0-1.0.0-beta.11.0",
+  "version": "1.0.0-beta.11",
   "description": "Wingsuit Core Design System.",
   "repository": {
     "type": "git",
@@ -79,5 +79,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "c3da3714569f0e437fb99b3907323541226a44b6"
+  "gitHead": "e4066a0eb082ae849ffdea0d64da9f2ddba5d193"
 }
