--- a/examples/official-wingsuit/package.json
+++ b/examples/official-wingsuit/package.json
@@ -1,7 +1,7 @@
 {
   "name": "official-wingsuit",
   "private": true,
-  "version": "1.0.0-1.0.0-beta.11.0",
+  "version": "1.0.0-beta.11",
   "description": "A design system with Storybook, Tailwind and Drupal",
   "main": "",
   "license": "GPL-2.0",
