Fix typo in libraries yml.

--- a/packages/wingsuit/apps/drupal/wingsuit.libraries.yml
+++ b/packages/wingsuit/apps/drupal/wingsuit.libraries.yml
@@ -6,7 +6,7 @@ core:
         preprocess: true
       ws-assets://typo.css:
         preprocess: true
-      ws-assets:///hamburger.css:
+      ws-assets://hamburger.css:
         preprocess: true
   js:
     ws-assets://vendors/alpine.js:
