--- a/examples/official-wingsuit/package.json
+++ b/examples/official-wingsuit/package.json
@@ -28,10 +28,10 @@
     "@packtracker/webpack-plugin": "^2.0.1",
     "@storybook/addon-viewport": "^6.0.0-beta.6",
     "@storybook/react": "^6.0.0-beta.6",
-    "@wingsuit-designsystem/cli": "1.0.0-1.0.0-beta.11.0",
-    "@wingsuit-designsystem/core": "1.0.0-1.0.0-beta.11.0",
-    "@wingsuit-designsystem/pattern": "1.0.0-1.0.0-beta.11.0",
-    "@wingsuit-designsystem/storybook": "1.0.0-1.0.0-beta.11.0",
+    "@wingsuit-designsystem/cli": "1.0.0-beta.15",
+    "@wingsuit-designsystem/core": "1.0.0-beta.15",
+    "@wingsuit-designsystem/pattern": "1.0.0-beta.15",
+    "@wingsuit-designsystem/storybook": "1.0.0-beta.15",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
