--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -70,6 +70,7 @@
     "yo": "^3.1.1"
   },
   "dependencies": {
+    "@storybook/addon-backgrounds": "^6.0.21",
     "alpinejs": "^2.7.0",
     "svg4everybody": "^2.1.9",
     "tailwindcss": "^1.7.0"
