Refactor image component.

--- a/packages/wingsuit/source/default/patterns/02-molecules/card/card.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/02-molecules/card/card.wingsuit.yml
@@ -9,7 +9,9 @@ card:
       description: The image tag.
       preview:
         id: image
-        variant: primary
+        variant: placeholder_image
+        settings:
+          style: card
     preheadline:
       type: text
       label: Preheadline
