--- a/packages/wingsuit/source/default/patterns/02-molecules/hero/hero.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/02-molecules/hero/hero.wingsuit.yml
@@ -26,7 +26,6 @@ hero:
       label: Image
       preview:
         id: image
-        variant: primary
+        variant: image
         settings:
-          placeholder: false
-          src: images/hero.png
+          url: ws-assets://images/hero.png
