--- a/packages/wingsuit/apps/storybook/config/image.config.yml
+++ b/packages/wingsuit/apps/storybook/config/image.config.yml
@@ -41,7 +41,7 @@ imageConfig:
       width: 1900
       height: 1068
   stylesResponsive:
-    card-hero:
+    card:
       style: 16x9_xs_sc
       breakpoints:
         xxs: 8x7_xxs_sc
@@ -53,25 +53,6 @@ imageConfig:
         xs: 8x7_xs_sc
         sm: 16x9_sm_sc
         md: 16x9_md_sc
-    card-default:
-      style: 16x9_xxs_sc
-      breakpoints:
-        xxs: 1x1_xxs_sc
-        xs: 1x1_xxs_sc
-        sm: 1x1_xxs_sc
-    card-horizontal:
-      style: 1x1_xxs_sc
-      breakpoints:
-        xxs: 1x1_xxs_sc
-        xs: 1x1_xxs_sc
-        sm: 1x1_xxs_sc
-    card-horizontal-large:
-      style: 16x9_xxxs_sc
-      breakpoints:
-        xxs: 1x1_xxs_sc
-        xs: 1x1_xxs_sc
-        sm: 1x1_xxs_sc
-
   breakpoints:
     xxs:
       mediaQuery: '(min-width: 0px) and (max-width: 459px)'
