--- a/packages/wingsuit/source/default/patterns/01-atoms/image/image.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/image/image.wingsuit.yml
@@ -1,7 +1,7 @@
 image:
   use: "@atoms/image/image.twig"
   label: Image
-  description: Image component with flexible size, style and variant.
+  description: "Image component with placeholder support."
   fields:
     image:
       type: text
@@ -11,34 +11,58 @@ image:
       type: text
       label: The caption text.
   variants:
-    primary:
-      label: Primary
-    bg:
-      label: Background
+    image:
+      label: Image
+      description: Use variant "image" for drupal images or theme images. Use ws-assets:// for theme images. E.g. "ws-assets://images/logo.svg"
+      settings:
+        placeholder: false
+        style: false
+        background_style: false
+        placeholder_url: false
+    background:
+      label: Background image
+      description: Set the image url with setting "url" and control the display with setting "background_style"
+      settings:
+        placeholder: false
+        placeholder_url: false
+        style: false
+    placeholder_image:
+      label: Image (placeholder)
+      description: "Placeholder images are very useful for prototype images.
+        You can configure your image styles in the apps/storybook/config/image.config.yml
+        and select the configured image style."
+      settings:
+        placeholder: true
+        url: false
+        background_style: false
+    placeholder_background:
+      label: Background image (placeholder)
+      settings:
+        placeholder: true
+        url: false
   settings:
-    circle:
-      label: Circle
-      type: boolean
-      default_value: false
-    size:
-      label: Size
-      type: select
-      options:
-        w-4: "Width: Small"
-        w-8: "Width: Medium"
-        w-12: "Width: Large"
-        h-4: "Height: Small"
-        h-8: "Height: Medium"
-        h-12: "Height: Large"
     placeholder:
       label: Placeholder
       type: boolean
-      default_value: true
-    src:
-      label: Src
+      default_value: false
+      description: Generate placeholder image.
+    url:
+      label: Url
       type: textfield
+      description: Use "Url" if you don't have the rendered image tag. The component will generate an image tag.
+      preview: 'ws-assets://images/logo.svg'
+    placeholder_url:
+      label: Placeholder url
+      type: textfield
+      description: The placeholder service url.
+      preview: https://satyr.io/
+    background_style:
+      label: Background style
+      description: Classes applied to background image container.
+      type: text
+      preview: w-full h-20 bg-cover
     style:
-      label: Style
+      label: Image style
       type: select
       preview: 16x9_md_sc
       options:
@@ -52,4 +76,6 @@ image:
         16x9_md_sc: LG 16x9
         16x9_xl_sc: XL 16x9
         16x9_xxl_sc: XXLL 16x9
+        card: Card
+        article: Article
   visibility: storybook
