--- a/packages/wingsuit/source/default/patterns/02-molecules/hero/hero.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/02-molecules/hero/hero.wingsuit.yml
@@ -17,10 +17,12 @@ hero:
       preview: "Sub-hero message, not too long and not too short. Make it just right!"
     button:
       type: pattern
-      label: Text
+      label: Button
       preview:
         id: button
         variant: default
+        settings:
+          color: white
     image:
       type: pattern
       label: Image
@@ -29,3 +31,4 @@ hero:
         variant: image
         settings:
           url: ws-assets://images/hero.png
+
