--- a/packages/wingsuit/source/default/patterns/03-organisms/footer/footer.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/03-organisms/footer/footer.wingsuit.yml
@@ -3,10 +3,29 @@ footer:
   label: Footer
   description: The footer pattern with copyright and menu.
   fields:
-    menu:
+    menu_1:
       type: pattern
       label: Menu
       preview:
         id: menu
         variant: footer
+    menu_2:
+      type: pattern
+      label: Menu
+      preview:
+        id: menu
+        variant: footer
+    menu_3:
+      type: pattern
+      label: Menu
+      preview:
+        id: menu
+        variant: footer
+    menu_4:
+      type: pattern
+      label: Menu
+      preview:
+        id: menu
+        variant: footer
+
   visibility: storybook
