--- a/packages/wingsuit/source/default/patterns/04-templates/article/article.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/04-templates/article/article.wingsuit.yml
@@ -8,6 +8,12 @@ article:
       label: Headline
       preview:
         faker: lorem.word
+    image:
+      type: pattern
+      label: Image
+      preview:
+        id: placeholder
+        variant: image
     text:
       type: text
       label: Text
@@ -20,5 +26,5 @@ article:
         faker: lorem.word
     more:
       type: text
-      label: More
+      label: More articles
   visibility: drupal
