--- a/packages/wingsuit/source/default/patterns/01-atoms/alert/alert.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/alert/alert.wingsuit.yml
@@ -13,4 +13,11 @@ alert:
       label: Content
       preview:
         faker: lorem.text
+  variants:
+    status:
+      label: Status message
+    error:
+      label: Error message
+    warning:
+      label: Warning message
   visibility: storybook
