--- a/packages/wingsuit/source/default/patterns/01-atoms/alert/alert.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/alert/alert.wingsuit.yml
@@ -1,7 +1,7 @@
 alert:
   use: "@atoms/alert/alert.twig"
   label: Alert
-  description: Example description
+  description: Colorful status, warning and error messages.
   fields:
     header:
       type: text
