--- a/packages/wingsuit/source/default/patterns/01-atoms/placeholder/placeholder.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/placeholder/placeholder.wingsuit.yml
@@ -45,4 +45,5 @@ placeholder:
         16x9_xxl_sc: XXLL 16x9
         card: Card
         article: Article
+        banner: Banner
   visibility: storybook
