--- a/packages/wingsuit/source/default/patterns/01-atoms/accordion-item/accordion-item.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/accordion-item/accordion-item.wingsuit.yml
@@ -1,15 +1,17 @@
 accordion_item:
   use: "@atoms/accordion-item/accordion-item.twig"
   label: Accordion Item
-  description: A single accordion item.
+  description: A collapsible accordion item without javascript from https://tailwindcomponents.com/component/collapsible-accordion.
   fields:
-    headline:
+    label:
       type: text
-      label: Headline
+      label: Label
+      description: The accordion item label.
       preview:
         faker: lorem.word
-    text:
+    content:
       type: text
-      label: Text
+      label: Content
+      description: The collapsed content.
       preview:
-        faker: lorem.word
+        faker: lorem.paragraph
