--- a/packages/wingsuit/source/default/patterns/01-atoms/forms/forms.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/forms/forms.wingsuit.yml
@@ -2,25 +2,36 @@ form_input:
   use: "@atoms/forms/_input.twig"
   namespace: "Atoms/Forms"
   label: Input
+  description: Input forms styled with Tailwind custom forms. Checkout https://tailwindcss-custom-forms.netlify.app/ for more infos.
   variants:
-    text:
-      label: Text
+    textfield:
+      label: Textfield
       settings:
-        attributes: ""
+        attributes: "type=\"text\" placeholder=\"Placeholder\""
+    email:
+      label: Email
+      settings:
+        attributes: "type=\"email\" placeholder=\"Email\""
+    file:
+      label: File
+      settings:
+        attributes: "type=\"file\""
+    tel:
+      label: Tel
+      settings:
+        attributes: "type=\"tel\""
+    date:
+      label: Date
+      settings:
+        attributes: "type=\"date\""
     checkbox:
       label: Checkbox
       settings:
         attributes: "type=\"checkbox\""
-      fields:
-        children:
-          id: form_label
     radio:
       label: Radio
       settings:
         attributes: "type=\"radio\""
-      fields:
-        children:
-          id: form_label
   settings:
     attributes:
       type: attributes
@@ -51,7 +62,7 @@ form_textarea:
   settings:
     wrapper_attributes:
       type: attributes
-      label: Warapper attributes
+      label: Wrapper attributes
     attributes:
       type: attributes
       label: Attributes
@@ -119,32 +130,124 @@ form_radios:
       type: pattern
       label: Children
       preview:
-        - id: form_input
+        - id: form_element
           variant: "radio"
-        - id: form_input
+        - id: form_element
           variant: "radio"
-        - id: form_input
+        - id: form_element
           variant: "radio"
   visibility: storybook
 
 
 form_element:
-  use: "@atoms/forms/_radios.twig"
+  use: "@atoms/forms/_form-element.twig"
   namespace: "Atoms/Forms"
-  label: Radios
+  label: Form element
+  description: Wrapper around label and form element styled with Tailwind custom forms. Checkout https://tailwindcss-custom-forms.netlify.app/ for more infos.
+  variants:
+    textfield:
+      label: Textfield
+      fields:
+        children:
+          id: form_input
+          variant: "textfield"
+    email:
+      label: Email
+      fields:
+        children:
+          id: form_input
+          variant: "email"
+    file:
+      label: File
+      fields:
+        children:
+          id: form_input
+          variant: "file"
+    tel:
+      label: Tel
+      fields:
+        children:
+          id: form_input
+          variant: "tel"
+    date:
+      label: Date
+      fields:
+        children:
+          id: form_input
+          variant: "date"
+    checkbox:
+      label: Checkbox
+      fields:
+        children:
+          id: form_input
+          variant: "checkbox"
+    checkboxes:
+      label: Checkboxes
+      fields:
+        children:
+          id: form_checkboxes
+    radio:
+      label: Radio
+      settings:
+        label_display: after
+      fields:
+        children:
+          id: form_input
+          variant: "radio"
+    radios:
+      label: Radios
+      fields:
+        children:
+          id: form_radios
+    select:
+      label: Select
+      fields:
+        children:
+          id: form_select
+
   settings:
+    label_display:
+      type: select
+      label: Label display
+      default_value: before
+      options:
+        before: Before
+        after: After
+        invisible: Invisible
+        hidden: Hidden
+    description_display:
+      type: select
+      label: Description display
+      options:
+        before: Before
+        after: After
+        invisible: Invisible
+        hidden: Hidden
     attributes:
       type: attributes
       label: Attributes
   fields:
+    label:
+      type: pattern
+      label: Label
+      description: The form label.
+      preview:
+        id: form_label
+    description_text:
+      type: text
+      label: Description
+      description: The form description.
+      preview:
+        faker: lorem.sentence
+    errors:
+      type: text
+      label: Errors
+      description: The error message.
     children:
       type: pattern
       label: Children
       preview:
-        - id: form_input
-          variant: "radio"
-        - id: form_input
-          variant: "radio"
-        - id: form_input
-          variant: "radio"
+        id: form_input
+        variant: "textfield"
+
   visibility: storybook
