WS #00: general update wingsuit.

--- a/packages/wingsuit/source/default/patterns/01-atoms/accordion-item/accordion-item.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/accordion-item/accordion-item.wingsuit.yml
@@ -15,3 +15,7 @@ accordion_item:
       description: The collapsed content.
       preview:
         faker: lorem.paragraph
+  settings:
+    id:
+      type: token
+      label: Id
