--- a/packages/wingsuit/source/default/patterns/01-atoms/container/container.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/container/container.wingsuit.yml
@@ -18,6 +18,7 @@ container:
         small: Small
         default: Default
         large: Large
+        xlarge: Xlarge
     bg:
       type: select
       label: Background color
