--- a/packages/wingsuit/source/default/patterns/03-organisms/section/section.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/03-organisms/section/section.wingsuit.yml
@@ -45,6 +45,7 @@ section:
         small: Small
         default: Default
         large: Large
+        xlarge: Xlarge
     bg:
       type: select
       label: Background color
