WS #00: button und wingsuit yml fix.

--- a/packages/wingsuit/source/default/patterns/01-atoms/container/container.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/container/container.wingsuit.yml
@@ -42,7 +42,7 @@ container:
         default: Default
         large: Large
     classes:
-      type: text
+      type: textfield
       label: Classes
       description: Additional CSS classes
     padding_bottom:
