--- a/packages/wingsuit/source/default/patterns/02-molecules/banner/banner.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/02-molecules/banner/banner.wingsuit.yml
@@ -2,6 +2,7 @@ banner:
   use: "@molecules/banner/banner.twig"
   label: Banner
   description: Big image banner with text overlay.
+  allow_variant_token: true
   variants:
     top_left:
       label: Top left
