WS #00: components small changes.

--- a/packages/wingsuit/source/default/patterns/02-molecules/card/card.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/02-molecules/card/card.wingsuit.yml
@@ -45,6 +45,12 @@ card:
       options:
         left: Left
         center: Center
+    bg_color:
+      type: select
+      label: Bg Color
+      options:
+        gray: Gray
+        blue: Blue
     url:
       type: token
       label: Url
