--- a/docs/package.json
+++ b/docs/package.json
@@ -17,8 +17,8 @@
     "publish:latest": "gh-pages -t -b master -d public -r https://$GH_TOKEN@github.com/wingsuit-designsystem/wingsuit-designsystem.github.io.git"
   },
   "dependencies": {
-    "@storybook/components": "5.2.5",
-    "@storybook/theming": "5.2.5",
+    "@storybook/components": "6.0.26",
+    "@storybook/theming": "6.0.26",
     "babel-loader": "^6.4.1",
     "babel-plugin-styled-components": "^1.10.6",
     "bootstrap": "^4.3.1",
@@ -29,6 +29,7 @@
     "gatsby-plugin-styled-components": "^2.0.0",
     "gatsby-remark-autolink-headers": "^1.4.19",
     "gatsby-remark-copy-linked-files": "^1.5.37",
+    "gatsby-remark-highlight-code": "^2.1.0",
     "gatsby-remark-images": "^1.5.67",
     "gatsby-remark-smartypants": "^1.4.12",
     "gatsby-source-filesystem": "^1.5.39",
