WS #00: general update.

--- a/packages/wingsuit/source/default/patterns/01-atoms/button/button.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/button/button.wingsuit.yml
@@ -10,22 +10,21 @@ button:
   variants:
     default:
       label: Default
-      configuration:
-        color:
-          orange: 'bg-orange-600'
-          white: 'bg-white'
     hollow:
       label: Hollow
       description: Inverts colors
+    gray:
+      label: Gray
   settings:
     color:
       type: select
       required: true
       label: Color
-      preview: orange
+      preview: pink
       options:
-        orange: Orange
+        pink: Pink
         white: White
+        gray: Gray
     url:
       type: token
       label: Url
