--- a/packages/wingsuit/source/default/patterns/03-organisms/header/header.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/03-organisms/header/header.wingsuit.yml
@@ -9,6 +9,12 @@ header:
       preview:
         id: menu
         variant: primary
+    button:
+      type: pattern
+      label: Button
+      preview:
+        id: button
+        variant: gray
   settings:
     has_spacer:
       label: Has spacer
